--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ bower_components/
 .floobit
 .floo
 .flooignore
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+node_modules/
+db/
+client/lib
